Bug 1171629 - Use fallible array to store MP4 samples index. r=kentuckyfriedtakahe, a=lizzard